--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 		<div class="content-wrapper">
 			<img src="img/derek-thurber.jpg" class="circle">
 			<h1>Derek Thurber</h1>
-			<h2>Instructional Designer // Graphic Designer // Front End Web Developer</h2>
+			<h2>Instructional Designer // Graphic Designer // Web Designer & Front End Developer</h2>
 			<ul class="horizontal-nav">
 				<li><a href="#0" target="_blank" class="nav-pill"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 				<li><a href="#0" target="_blank" class="nav-pill"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
@@ -14,7 +14,9 @@ layout: default
 			</ul>
 			<a href="#0" class='cd-btn' data-action="show-projects">Show projects</a>
 		</div>
+		
 	</div> <!-- .cd-intro-block -->
+	<!--<p>Be Creative. Be Professional. Be Effective.</p>-->
 
 	<div class="cd-projects-wrapper">
 		<ul class="cd-slider">
