updated social links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@ layout: default
 			<h1>Derek Thurber</h1>
 			<h2>Instructional Designer // Graphic Designer // Web Designer & Front End Developer</h2>
 			<ul class="horizontal-nav">
-				<li><a href="#0" target="_blank" class="nav-pill"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-				<li><a href="#0" target="_blank" class="nav-pill"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
-				<li><a href="#0" target="_blank" class="nav-pill"><i class="fa fa-github" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.linkedin.com/in/derekthurber" target="_blank" class="nav-pill"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+				<li><a href="https://www.behance.net/dwthurber" target="_blank" class="nav-pill"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
+				<li><a href="https://github.com/dwthurber/" target="_blank" class="nav-pill"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 			</ul>
 			<a href="#0" class='cd-btn' data-action="show-projects">Show projects</a>
 		</div>
