--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 				<li><a href="https://www.behance.net/dwthurber" target="_blank" class="nav-pill"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
 				<li><a href="https://github.com/dwthurber/" target="_blank" class="nav-pill"><i class="fa fa-github" aria-hidden="true"></i></a></li>
 			</ul>
-			<a href="#0" class='cd-btn' data-action="show-projects">Show projects</a>
+			<a href="#" class='cd-btn' data-action="show-projects">Show projects</a>
 		</div>
 		
 	</div> <!-- .cd-intro-block -->
