--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
 	<div class="cd-intro-content bouncy">
 		<h1>Derek Thurber</h1>
 		<p class="cd-headline letters rotate-2">
-			<span>Hello, I am a professional</span> 
+			<span>Hello, I am a professional&nbsp;</span> 
 			<span class="cd-words-wrapper">
-                <b>Website&nbsp;Designer</b>
+                <b>Web&nbsp;Developer</b>
 				<b class="is-visible">Learning&nbsp;Designer</b>
                 <b>Graphic&nbsp;Designer</b>
 			</span>
 		</p>
 		<div class="action-wrapper">
 			<a href="#0" class="cd-btn main-action" class="cd-btn" id="modal-trigger" data-type="cd-modal-trigger">Learn More</a>
-			<a href="http://acdmy.dwthurber.com" class="cd-btn">Acdmy</a>
 		</div>
 	</div>
     <div class="social bouncy">
