--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li><a href="https://www.linkedin.com/in/derekthurber/" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a></li>
             <li><a href="https://github.com/dwthurber/" target="_blank"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a></li>
             <li><a href="https://www.behance.net/dwthurber" target="_blank"><i class="fa fa-behance fa-lg" aria-hidden="true"></i></a></li>
-            <li><a href="https://portfolium.com/derekthurber" target="_blank"><i class="fa fa-user-circle-o fa-lg" aria-hidden="true"></i></a></li>
+            <li><a href="https://angel.co/derek-thurber?public_profile=1" target="_blank"><i class="fa fa-angellist fa-lg" aria-hidden="true"></i></a></li>
         </ul>
     </div>
 </section>
@@ -75,7 +75,7 @@
 			</p>
 
 			<p>
-				I have worked on lots of creative things and loved doing all of them. Many of the creative things I have worked on have been designing learning environments that <a class="line" href="http://acdmy.dwthurber.com" target="_blank">challenge convention</a>, <a class="line" href="https://portfolium.com/entry/virtual-tutor-training" target="_blank">redesign old standards in a new format</a>, and <a class="line" href="https://portfolium.com/entry/career-911-mooc" target="_blank">explore the possibilities of quality instruction</a> in person and online. Other creative things I have done include designing print marketing materials, interactive infographics, and engaging web designs among other <a href="https://www.behance.net/dwthurber" target="_blank">cool things</a>.  
+				I have worked on lots of creative things and loved doing all of them. Many of the creative things I have worked on have been designing learning environments that <a class="line" href="https://angel.co/projects/667404-northwestern-blended-format-graduate-certificate" target="_blank">challenge convention</a>, <a class="line" href="https://angel.co/projects/667398-riverland-tutor-training" target="_blank">redesign old standards in a new format</a>, and <a class="line" href="https://angel.co/projects/629644-career-911-mooc" target="_blank">explore the possibilities of quality instruction</a> in person and online. Other creative things I have done include designing print marketing materials, interactive infographics, and engaging web designs among other <a class="line" href="https://www.behance.net/dwthurber" target="_blank">cool things</a>.  
 			</p>
             <p>
                 I currently work as an <a class="line" href="http://www.sesp.northwestern.edu/profile/?p=22814&/DerekThurber/" target="_blank">Instructional Design and Technology Consultant at Northwestern University</a>. Before that, I studied medieval history, interned at the White House, tried my hand as a paralegal, volunteered for AmeriCorps, worked for several colleges, and picked up a Master's Degree in Higher Education Administration and Policy  along the way. I can't stop thinking about the future. The future of technology; the future of learning; the future of our planet; the future of my life. What new thing can I learn? What creative project can I do next? If you have a project I can work with you on, please reach out. I am available for freelancing. 
