--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 		<div class="cd-modal-content">
 			<p>
-                I am a <strong>professional designer</strong> with experience creating innovative graphic, web, and learning designs which engage, interpret, and explain. I am also an <strong>effective project manager</strong>, comfortable juggling numerous projects with various stakeholders in different stages simultaneously. Plus, I'm a <strong>strong communicator</strong>, especially adept at bridging the gap between technical and non-technical audiences. Read more on my <a class="line" href="https://www.dropbox.com/s/5r65fgqtnfh2kd1/Resume%20%281%20Page%29.pdf?dl=0" target="_blank">Resume</a>, or if you really want to know more, my <a class="line" href="https://www.dropbox.com/s/bq4jeuye3ipdgbk/Curriculum%20Vitae.pdf?dl=0" target="_blank">Curriculum Vitae</a>.
+                I am a <strong>professional designer</strong> with experience creating innovative graphic, web, and learning designs which engage, interpret, and explain. I am also an <strong>effective project manager</strong>, comfortable juggling numerous projects with various stakeholders in different stages simultaneously. Plus, I'm a <strong>strong communicator</strong>, especially adept at bridging the gap between technical and non-technical audiences.
 			</p>
 
 			<p>
