--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 		<p class="cd-headline letters rotate-2">
 			<span>Hello, I am a professional&nbsp;</span> 
 			<span class="cd-words-wrapper">
-                <b>Web&nbsp;Developer</b>
+                <b>Web&nbsp;Designer</b>
+				<b>Front-end&nbsp;Developer</b>
 				<b class="is-visible">Learning&nbsp;Designer</b>
                 <b>Graphic&nbsp;Designer</b>
+				<b>User&nbsp;Experience&nbsp;Designer</b>
 			</span>
 		</p>
 		<div class="action-wrapper">
