--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<div class="cd-intro-content bouncy">
 		<h1>Derek Thurber</h1>
 		<p class="cd-headline letters rotate-2">
-			<span>Hello, I am a professional&nbsp;</span> 
+			<span>Hello, I am a Professional&nbsp;</span> 
 			<span class="cd-words-wrapper">
                 <b>Web&nbsp;Designer</b>
 				<b>Front-end&nbsp;Developer</b>
