--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<b>User&nbsp;Experience&nbsp;Designer</b>
 			</span>
 		</p>
-		<div class="action-wrapper">
+		<div>
 			<a href="https://www.behance.net/gallery/64084965/Acdmy-UIUX-Case-Study-Virtual-Classroom-Web-App" target="_blank" class="cd-btn" id="modal-trigger" data-type="cd-modal-trigger">Acdmy</a>
 		</div>
 		<div class="action-wrapper">
