--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 				<b>User&nbsp;Experience&nbsp;Designer</b>
 			</span>
 		</p>
-		<div>
-			<a href="https://www.behance.net/gallery/64084965/Acdmy-UIUX-Case-Study-Virtual-Classroom-Web-App" target="_blank" class="cd-btn" id="modal-trigger" data-type="cd-modal-trigger">Acdmy</a>
+		<div class="action-wrapper">
+			<a href="https://www.behance.net/gallery/64084965/Acdmy-UIUX-Case-Study-Virtual-Classroom-Web-App" target="_blank" class="cd-btn">Acdmy</a>
 		</div>
 		<div class="action-wrapper">
 			<a href="#0" class="cd-btn main-action" class="cd-btn" id="modal-trigger" data-type="cd-modal-trigger">Learn More</a>
